fix category.units lỗi quan hệ sửa thành
'category.activeUnits'
