# app/Http/Controllers/Admin/AdminProductController.php
@@ -57,7 +57,7 @@ class AdminProductController extends BaseController
                     'category.activeUnits' // Sử dụng quan hệ `activeUnits` đã khai báo với điều kiện `active = 1`
                 ])->find($id);
             });
-            
+
             return $this->sendResponse($product, 'lấy sản phẩm thành công');
         } catch (\Throwable $th) {
             return $this->sendError('Sản phẩm không tồn tại', ['error' => $th->getMessage()], 404);
@@ -72,9 +72,7 @@ class AdminProductController extends BaseController
                     'category' => function ($query) {
                         $query->where('active', 1); // Lấy danh mục có active = 1
                     },
-                    'category.units' => function ($query) {
-                        $query->where('active', 1); // Lấy đơn vị có active = 1 
-                    }
+                    'category.activeUnits' // Sử dụng quan hệ `activeUnits` đã khai báo với điều kiện `active = 1`
                 ])->find($id);
             });
 
@@ -91,7 +89,7 @@ class AdminProductController extends BaseController
             ]);
 
             // Loại bỏ các trường không có trong request để giữ nguyên giá trị cũ
-            $dataToUpdate = array_filter($validatedData, fn($value) => !is_null($value));
+            $dataToUpdate = array_filter($validatedData, fn ($value) => !is_null($value));
 
             // Xóa ảnh cũ và upload ảnh mới nếu có
             if ($request->hasFile('img')) {
